--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/product/TiendaOcultos.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/product/TiendaOcultos.html
@@ -143,17 +143,19 @@
 								<a th:href="@{'/modify-product/' + ${product.id}}" class="btn btn-outline-dark btn-sm">
 									<i class="bi bi-pencil"></i> Modificar
 								</a>
-								<a th:href="@{'/delete-product/' + ${product.id}}"
-									class="btn btn-outline-danger btn-sm">
+								<button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal"
+									th:data-bs-target="'#deleteModal' + ${product.id}">
 									<i class="bi bi-x"></i> Eliminar
-								</a>
+								</button>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-
 		</section>
+
+		<div th:replace="~{Fragments :: productDeleteModal}"></div>
+
 	</main>
 
 	<footer class="mt-5 border-top" th:replace="~{Fragments :: footer}"></footer>
