--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/brand/Marcas.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/brand/Marcas.html
@@ -13,63 +13,72 @@
 </head>
 
 <body>
-	<header th:replace = "~{Fragments :: header}"></header>
+	<header th:replace="~{Fragments :: header}"></header>
 
 	<main class="container my-5">
-		<div class="align-items-center mb-4">
-			<h1 class="fw-bold">Gestión de Marcas</h1>
-		</div>
-		<div class="row mb-4 justify-content-end">
-			<div class="col-md-8">
-				<h1 class="fw-bold" th:text="${resultCount} + ' RESULTADOS'"></h1>
+		<section>
+			<div class="align-items-center mb-4">
+				<h1 class="fw-bold">Gestión de Marcas</h1>
 			</div>
-			<div class="col-md-4">
-				<form class="d-flex" th:action="@{/brands/search}" method="get">
-					<input class="form-control me-2" type="search" name="search" placeholder="Buscar marca">
-					<button class="btn btn-outline" type="submit"><i class="bi bi-search"></i></button>
-				</form>
+			<div class="row mb-4 justify-content-end">
+				<div class="col-md-8">
+					<h1 class="fw-bold" th:text="${resultCount} + ' RESULTADOS'"></h1>
+				</div>
+				<div class="col-md-4">
+					<form class="d-flex" th:action="@{/brands/search}" method="get">
+						<input class="form-control me-2" type="search" name="search" placeholder="Buscar marca">
+						<button class="btn btn-outline" type="submit"><i class="bi bi-search"></i></button>
+					</form>
+				</div>
 			</div>
-		</div>
 
-		<div class="text-center m-4">
-			<a th:href="@{/create-brand}" class="btn btn-dark btn-lg">
-				<i class="bi bi-plus-lg"></i> Añadir nueva marca
-			</a>
-		</div>
+			<div class="text-center m-4">
+				<a th:href="@{/create-brand}" class="btn btn-dark btn-lg">
+					<i class="bi bi-plus-lg"></i> Añadir nueva marca
+				</a>
+			</div>
+		</section>
 
-		<div class="row" th:if="${brands}">
-			<div class="col-lg-4 col-md-6 col-sm-12 mb-4" th:each="brand : ${brands}">
-				<div class="card h-100 shadow">
-					<div class="card-body d-flex flex-column justify-content-between">
-						<div class="row">
-							<div class="col-5 d-flex align-items-center">
-								<div>
-									<h5 class="card-title fw-bold" th:text="${brand.brandName}">Nombre de la Marca</h5>
-									<p class="card-text text-muted" th:text="'ID: ' + ${brand.id}"></p>
-									<p class="card-text text-danger" th:if="${brand.discount > 0}"
-										th:text="'-' + ${brand.discount} + '%'">Promoción</p>
+		<section>
+			<div class="row" th:if="${brands}">
+				<div class="col-lg-4 col-md-6 col-sm-12 mb-4" th:each="brand : ${brands}">
+					<div class="card h-100 shadow">
+						<div class="card-body d-flex flex-column justify-content-between">
+							<div class="row">
+								<div class="col-5 d-flex align-items-center">
+									<div>
+										<h5 class="card-title fw-bold" th:text="${brand.brandName}">Nombre de la Marca
+										</h5>
+										<p class="card-text text-muted" th:text="'ID: ' + ${brand.id}"></p>
+										<p class="card-text text-danger" th:if="${brand.discount > 0}"
+											th:text="'-' + ${brand.discount} + '%'">Promoción</p>
+									</div>
+								</div>
+								<div class="col-7 d-flex align-items-center">
+									<a th:href="@{/shop(brand=${brand.id})}">
+										<img th:src="${#strings.isEmpty(brand.logo) ? 'https://www.shutterstock.com/image-vector/image-icon-trendy-flat-style-600nw-643080895.jpg' : brand.logo}"
+											th:alt="${#strings.isEmpty(brand.altText) ? 'Logo por defecto' : brand.altText}"
+											class="card-img" />
+									</a>
 								</div>
 							</div>
-							<div class="col-7 d-flex align-items-center">
-								<a th:href="@{/shop(brand=${brand.id})}">
-									<img th:src="${#strings.isEmpty(brand.logo) ? 'https://www.shutterstock.com/image-vector/image-icon-trendy-flat-style-600nw-643080895.jpg' : brand.logo}"
-										th:alt="${#strings.isEmpty(brand.altText) ? 'Logo por defecto' : brand.altText}"
-										class="card-img" />
+							<div class="d-flex justify-content-between mt-3">
+								<a th:href="@{'/modify-brand/' + ${brand.id}}" class="btn btn-outline-dark btn-sm">
+									<i class="bi bi-pencil"></i> Modificar
 								</a>
+								<button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal"
+									th:data-bs-target="'#deleteModal' + ${brand.id}">
+									<i class="bi bi-x"></i> Eliminar
+								</button>
 							</div>
-						</div>
-						<div class="d-flex justify-content-between mt-3">
-							<a th:href="@{'/modify-brand/' + ${brand.id}}" class="btn btn-outline-dark btn-sm">
-								<i class="bi bi-pencil"></i> Modificar
-							</a>
-							<a th:href="@{'/delete-brand/' + ${brand.id}}" class="btn btn-outline-danger btn-sm">
-								<i class="bi bi-trash"></i> Eliminar
-							</a>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
+
+
+		<div th:replace="~{Fragments :: brandDeleteModal}"></div>
 
 	</main>
 
