--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/category/Categorias.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/category/Categorias.html
@@ -13,44 +13,52 @@
 </head>
 
 <body>
-	<header th:replace = "~{Fragments :: header}"></header>
+	<header th:replace="~{Fragments :: header}"></header>
 
 	<main class="container my-5">
-		<div class="align-items-center mb-4">
-			<h1 class="fw-bold">Gestión de Categorias</h1>
-		</div>
+		<section>
+			<div class="align-items-center mb-4">
+				<h1 class="fw-bold">Gestión de Categorias</h1>
+			</div>
 
-		<div class="text-center m-4">
-			<a href="/create-category" class="btn btn-dark btn-lg">
-				<i class="bi bi-plus-lg"></i> Añadir nueva categoría
-			</a>
-		</div>
+			<div class="text-center m-4">
+				<a href="/create-category" class="btn btn-dark btn-lg">
+					<i class="bi bi-plus-lg"></i> Añadir nueva categoría
+				</a>
+			</div>
+		</section>
 
-		<div class="row" th:if="${categories}">
-			<div class="col-lg-3 col-md-4 col-sm-6 mb-4" th:each="category : ${categories}">
-				<div class="card h-100 shadow">
-					<div class="card-body d-flex flex-column justify-content-between">
-						<div class="row">
-							<div class="d-flex align-items-center">
-								<div>
-									<h5 class="card-title fw-bold" th:text="${category.categoryName}">Nombre de la
-										Categoría</h5>
-									<p class="card-text text-muted" th:text="'ID: ' + ${category.id}"></p>
+		<section>
+			<div class="row" th:if="${categories}">
+				<div class="col-lg-3 col-md-4 col-sm-6 mb-4" th:each="category : ${categories}">
+					<div class="card h-100 shadow">
+						<div class="card-body d-flex flex-column justify-content-between">
+							<div class="row">
+								<div class="d-flex align-items-center">
+									<div>
+										<h5 class="card-title fw-bold" th:text="${category.categoryName}">Nombre de la
+											Categoría</h5>
+										<p class="card-text text-muted" th:text="'ID: ' + ${category.id}"></p>
+									</div>
 								</div>
 							</div>
-						</div>
-						<div class="d-flex justify-content-between mt-3">
-							<a th:href="@{'/modify-category/' + ${category.id}}" class="btn btn-outline-dark btn-sm">
-								<i class="bi bi-pencil"></i> Modificar
-							</a>
-							<a th:href="@{'/delete-category/' + ${category.id}}" class="btn btn-outline-danger btn-sm">
-								<i class="bi bi-trash"></i> Eliminar
-							</a>
+							<div class="d-flex justify-content-between mt-3">
+								<a th:href="@{'/modify-category/' + ${category.id}}"
+									class="btn btn-outline-dark btn-sm">
+									<i class="bi bi-pencil"></i> Modificar
+								</a>
+								<button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal"
+									th:data-bs-target="'#deleteModal' + ${category.id}">
+									<i class="bi bi-x"></i> Eliminar
+								</button>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
+
+		<div th:replace="~{Fragments :: categoryDeleteModal}"></div>
 
 	</main>
 
