--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/product/Tienda.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/product/Tienda.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<header th:replace = "~{Fragments :: header}"></header>
+	<header th:replace="~{Fragments :: header}"></header>
 
 	<main>
 		<section class="container my-4">
@@ -58,7 +58,8 @@
 			<div class="mb-4">
 				<div class="row align-items-center">
 					<div class="col-12 col-md-6 mb-3 mb-md-0">
-						<h1 class="fw-bold text-center text-md-start" th:text="${resultCount} + ' RESULTADOS'">0 RESULTADOS</h1>
+						<h1 class="fw-bold text-center text-md-start" th:text="${resultCount} + ' RESULTADOS'">0
+							RESULTADOS</h1>
 					</div>
 
 					<div class="col-12 col-md-6">
@@ -73,7 +74,8 @@
 							</div>
 							<div class="col-12 col-sm-5">
 								<form action="#" method="get">
-									<select class="form-select w-100" name="sort" onchange="this.form.submit()" aria-label="Ordenar productos">
+									<select class="form-select w-100" name="sort" onchange="this.form.submit()"
+										aria-label="Ordenar productos">
 										<option value="" th:selected="${sort == null}">Ordenar</option>
 										<option value="0" th:selected="${sort == 0}">Precio: Menor a mayor</option>
 										<option value="1" th:selected="${sort == 1}">Precio: Mayor a menor</option>
@@ -134,7 +136,7 @@
 									</span>
 								</h5>
 							</div>
-							
+
 							<div class="d-flex justify-content-end">
 								<a th:href="@{'/shop/product/' + ${product.id}}" class="btn btn-sm btn-outline-dark">
 									<i class="bi bi-arrow-bar-left p-1"></i>Ver más</a>
@@ -144,16 +146,19 @@
 								<a th:href="@{'/modify-product/' + ${product.id}}" class="btn btn-outline-dark btn-sm">
 									<i class="bi bi-pencil"></i> Modificar
 								</a>
-								<a th:href="@{'/delete-product/' + ${product.id}}" class="btn btn-outline-danger btn-sm">
+								<button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal"
+									th:data-bs-target="'#deleteModal' + ${product.id}">
 									<i class="bi bi-x"></i> Eliminar
-								</a>
+								</button>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-
 		</section>
+
+		<div th:replace="~{Fragments :: productDeleteModal}"></div>
+
 	</main>
 
 	<footer class="mt-5 border-top" th:replace="~{Fragments :: footer}"></footer>
