--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/brand/Marcas.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/brand/Marcas.html
@@ -31,6 +31,9 @@
 					</form>
 				</div>
 			</div>
+			
+			<div th:replace="~{Fragments :: errorMessageModal}"></div>
+			<div th:replace="~{Fragments :: successMessageModal}"></div>
 
 			<div class="text-center m-4">
 				<a th:href="@{/create-brand}" class="btn btn-dark btn-lg">
