--- a/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/web/PoliticaPrivacidad.html
+++ b/Programacion/ProyectoFinal/SerranoRuizMauro/src/main/resources/templates/web/PoliticaPrivacidad.html
@@ -21,8 +21,9 @@
 		<div class="row g-5">
 			<div class="col-md-6">
 				<section>
-					<h4><i class="bi bi-person-shield me-2"></i>Información que recopilamos</h4>
-					<p class="lead">Recogemos datos personales como nombre, correo, dirección y datos de pago para procesar pedidos y mejorar la experiencia del usuario.</p>
+					<h4><i class="bi bi-info-lg me-1"></i>Información que recopilamos</h4>
+					<p class="lead">Recogemos datos personales como nombre, correo, dirección y datos de pago para
+						procesar pedidos y mejorar la experiencia del usuario.</p>
 				</section>
 			</div>
 			<div class="col-md-6">
@@ -39,26 +40,30 @@
 			<div class="col-md-6">
 				<section>
 					<h4><i class="bi bi-diagram-3 me-2"></i>Compartir datos</h4>
-					<p class="lead">No vendemos tus datos. Solo compartimos con servicios de pago y envío, bajo estrictas normas de seguridad.</p>
+					<p class="lead">No vendemos tus datos. Solo compartimos con servicios de pago y envío, bajo
+						estrictas normas de seguridad.</p>
 				</section>
 			</div>
 			<div class="col-md-6">
 				<section>
 					<h4><i class="bi bi-gear-fill me-2"></i>Derechos del usuario</h4>
-					<p class="lead">Puedes acceder, corregir o eliminar tus datos. Contáctanos en service@tablarota.es.</p>
+					<p class="lead">Puedes acceder, corregir o eliminar tus datos. Contáctanos en service@tablarota.es.
+					</p>
 				</section>
 			</div>
 
 			<div class="col-md-6">
 				<section>
 					<h4><i class="bi bi-lock-fill me-2"></i>Seguridad</h4>
-					<p class="lead">Aplicamos medidas técnicas y organizativas para proteger tus datos de accesos no autorizados o pérdidas.</p>
+					<p class="lead">Aplicamos medidas técnicas y organizativas para proteger tus datos de accesos no
+						autorizados o pérdidas.</p>
 				</section>
 			</div>
 			<div class="col-md-6">
 				<section>
 					<h4><i class="bi bi-arrow-repeat me-2"></i>Cambios en la política</h4>
-					<p class="lead">Podemos modificar esta política por razones legales o mejoras del sitio. Revisa esta sección regularmente.</p>
+					<p class="lead">Podemos modificar esta política por razones legales o mejoras del sitio. Revisa esta
+						sección regularmente.</p>
 				</section>
 			</div>
 		</div>
